# Thermocouple_Deployment

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Deployments/PEP_GS_Main/: BBB-build.sh  CMakeLists.txt  Main.cpp  README.md  settings.ini
Deployments/PEP_GS_Main/Components/TempReceiver/: CMakeLists.txt  TempReceiver.cpp  TempReceiver.fpp  TempReceiver.hpp
Deployments/PEP_GS_Main/Components/TempReceiver/docs/: sdd.md
Deployments/PEP_GS_Main/Components/TempSender/: CMakeLists.txt  TempSender.cpp  TempSender.fpp  TempSender.hpp
Deployments/PEP_GS_Main/Components/TempSender/docs/: sdd.md
Deployments/PEP_GS_Main/Datatypes/: CMakeLists.txt  TempTypes.fpp
Deployments/PEP_GS_Main/Ports/: CMakeLists.txt  TempPorts.fpp
Deployments/PEP_GS_Main/Top/: CMakeLists.txt  PEP_GS_MainPackets.xml  PEP_GS_MainTopology.cpp  PEP_GS_MainTopology.hpp  PEP_GS_MainTopologyDefs.hpp  instances.fpp  topology.fpp
Deployments/PEP_GS_Main/libs/MCP9600/: CMakeLists.txt
Deployments/PEP_GS_Main/libs/MCP9600/.cache/clangd/index/: MCP9600.c.C48E499EF6420E17.idx  MCP9600.h.C76C35BDDD4E05A7.idx  TestMain.cpp.5A428EF747C6276D.idx
Deployments/PEP_GS_Main/libs/MCP9600/src/: CMakeLists.txt  MCP9600.c  MCP9600.h  beaglebone.cmake
Deployments/PEP_GS_Main/libs/MCP9600/src/test/ut/: CMakeLists.txt  TestMain.cpp
old_workflows/: check-style.yml  static.yml
